chore: httpapi 구조 변경
